
Additions:
 - More screenshot-related feature:
  ~ Pressing P takes a screenshot (before it only worked with PRINTSCREEN). This can be bound in the options menu.
  ~ Screenshot folder can be accessed via the title screen.
  ~ Screenshots will now also hide the time indicator.

Changes:
 - Infernal Coin also applies fire elemental rates.

Bug Fixes:
 - Fixed a game-breaking crash that prevented progress past the Mini Green Slime.
 - Fixed levels not actually capping at 25.
 - Fixed quest window not hiding during screenshots if an event is running.
 - Fixed buggy Time Indicator option.
 - Fixed a tutorial tip appearing that should be impossible to see.
 - Fixed some issues with the secret boss (and made a few improvements while I was at it).

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                              ALPHA 15 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 15 (2/3/2025)
The Champion Update
Current Level Cap: 25
- - - - - - - - - - - - -
Every major update has been the best yet, and Alpha 15 is no exception!
Building off of Alpha 14's heavy overhauls, this update focuses on adding a massive amount of content that redefines the standard.

Telluria Castle Town is the hub of the world.
Buy insanely powerful equipment, upgrade (almost) everything, discover new mechanics, etc... you can do anything and everything in the capital!

Outside those walls, super-powerful enemies lurk within a variety of places.
They'll be a challenge at first, but with so many new ways to strengthen your party, you'll never have a shortage of ways to progress.

I hope you all feel the power as you progress through Telluria Field! But will you be able to defeat the ultimate threat...?

Additions:
 - All chapter 5 content!
 - Various additions to augment previous content.
 - New graphics for animations, state overlays, icons, tiles, and more!
 - Discord rich presence support.