@@ -261,7 +261,23 @@
     "id": 7,
     "autoRemovalTiming": 2,
     "chanceByDamage": 100,
-    "traits": [],
+    "traits": [
+      {
+        "code": 11,
+        "dataId": 5,
+        "value": 2
+      },
+      {
+        "code": 11,
+        "dataId": 6,
+        "value": 2
+      },
+      {
+        "code": 11,
+        "dataId": 7,
+        "value": 2
+      }
+    ],
     "iconIndex": 104,
     "maxTurns": 3,
     "message1": " is on fire!",
@@ -271,7 +287,7 @@
     "minTurns": 2,
     "motion": 1,
     "name": "On Fire!",
-    "note": "<Category: Fire>\n<Category: debuff>\n<Category: weak debuff>\n\n<Reapply Add Turns>\n\n<animationRow:28>\n\n<DoT Formula: 50>\n<DoT Element: 2>\n<DoT Animation: 67>\n\n<Help Description>\nDeals 50 \\nl[2] damage per turn.\n</Help Description>",
+    "note": "<Category: Fire>\n<Category: debuff>\n<Category: weak debuff>\n\n<Custom Respond Effect>\nif (this.hasElement([5, 6, 7])) target.removeState(7);\n</Custom Respond Effect>\n\n<Reapply Add Turns>\n\n<animationRow:28>\n\n<DoT Formula: 50>\n<DoT Element: 2>\n<DoT Animation: 67>\n\n<Help Description>\nDeals 50 \\nl[2] damage per turn.\n</Help Description>",
     "overlay": 0,
     "priority": 49,
     "removeAtBattleEnd": false,
@@ -3261,6 +3277,21 @@
         "code": 14,
         "dataId": 7,
         "value": 1
+      },
+      {
+        "code": 11,
+        "dataId": 5,
+        "value": 2
+      },
+      {
+        "code": 11,
+        "dataId": 6,
+        "value": 2
+      },
+      {
+        "code": 11,
+        "dataId": 7,
+        "value": 2
       }
     ],
     "iconIndex": 104,
@@ -3272,7 +3303,7 @@
     "minTurns": 3,
     "motion": 1,
     "name": "Burning Up!",
-    "note": "<Category: Fire>\n<Category: debuff>\n<Category: moderate debuff>\n\n<Reapply Add Turns>\n\n<animationRow:28>\n\n<DoT Formula: 200>\n<DoT Element: 2>\n<DoT Animation: 67>\n\n<Help Description>\nDeals 200 \\nl[2] damage per turn.\n</Help Description>",
+    "note": "<Category: Fire>\n<Category: debuff>\n<Category: moderate debuff>\n\n<Custom Respond Effect>\nif (this.hasElement([5, 6, 7])) target.removeState(102);\n</Custom Respond Effect>\n\n<Reapply Add Turns>\n\n<animationRow:28>\n\n<DoT Formula: 200>\n<DoT Element: 2>\n<DoT Animation: 67>\n\n<Help Description>\nDeals 200 \\nl[2] damage per turn.\n</Help Description>",
     "overlay": 0,
     "priority": 49,
     "removeAtBattleEnd": true,
