@@ -14,6 +14,7 @@ Additions:
 
 Changes:
  - Infernal Coin also applies fire elemental rates.
+ - On Fire! and Burning Up! take increased damage from Water/Earth/Wind attacks, as well as the fire being put out.
 
 Bug Fixes:
  - Fixed a game-breaking crash that prevented progress past the Mini Green Slime.
